Fix WebKit CSS filter for greying out interface elements during tutorial - it had broken in latest Chrome v26

--- a/less/global.less
+++ b/less/global.less
@@ -453,9 +453,9 @@ body:-ms-full-screen        .fullscreen { .tb-fullscreen(); }
     -moz-animation-direction: alternate;
 }
 
-//for fading out objects during the tutorial
+//for fading out objects during the tutorial, nb. brightness now interpreted differently by Chrome & Safari
 .fade {
-	-webkit-filter: grayscale(100%) contrast(50%); //brightness(0.85)
+	-webkit-filter: grayscale(100%) contrast(65%);
 //    -moz-filter: grayscale(100%) brightness(0.85) contrast(50%);
 //    filter: grayscale(1) brightness(0.85) contrast(50%);
 
